Update settings and enhance dashboard navigation
- Enabled software factory mode in settings and updated the default mode to software factory.
- Introduced a DashboardRedirect component to manage navigation based on active modes.
- Updated the App component to use DashboardRedirect for the root route.
- Modified Sidebar to conditionally display the Dashboard link based on active modes.
- Enhanced the Dashboard component to redirect users based on the active mode settings.

--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,5 @@
 {
-  "show_software_factory_mode": false,
+  "show_software_factory_mode": true,
   "show_product_mode": true,
-  "default_mode": "product"
+  "default_mode": "software_factory"
 }
